Tables.jsx: called the api and fixed the css of scrollbar

--- a/src/Components/Tables/Tables.css
+++ b/src/Components/Tables/Tables.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
 .container {
   width: 100%;
   height: 90vh;
